--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
     
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
   </head>
 
   <body>
@@ -55,7 +57,7 @@
         <h2>Compose Tweet</h2>
         <form class="form" method="POST" action="/tweets">
           <label for="tweet-text">What are you humming about?</label>
-          <textarea name="text" id="tweet-text"></textarea>
+          <textarea name="text" id="tweet-text-area"></textarea>
           <div id="tweet-footer">
             <button type="submit">Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
@@ -63,7 +65,6 @@
         </form>
       </section>
       </main>
-
 
   </body>
 </html>
