Clean tweets.css + index.html

--- a/public/index.html
+++ b/public/index.html
@@ -63,10 +63,10 @@
         </form>
       </section>
 
-          <article>
-            <header id="tweet">
-              <div class="left">
-              <i id="user-icon" class="fa-regular fa-face-flushed fa-2xl"></i>
+          <!-- <article>
+            <header class="tweet-whole">
+              <div class="tweet-left">
+              <i id="user-icon"></i>
               <h2 id="user-name"></h2>
               </div>
               <h2 id="user-handle"></h2>
@@ -80,7 +80,7 @@
               <i class="fa-solid fa-heart"></i>
           </div>
           </footer>
-        </article>
+        </article> -->
         
       </section>
 
