Implement ajax with jQuery for form submit

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
         <h2>Compose Tweet</h2>
         <form class="form" method="POST" action="/tweets">
           <label for="tweet-text">What are you humming about?</label>
+          <!-- JQYUERY will rely on the name and id attributes -->
           <textarea name="text" id="tweet-text-area"></textarea>
           <div id="tweet-footer">
             <button type="submit">Tweet</button>
@@ -85,5 +86,8 @@
       </section>
 
     </main>
+    <script>
+      // remove this <script> tag if empty when project is complete!
+    </script>
   </body>
 </html>
