Adjust tweets container css + prepend new tweets

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
 </header>
 
     <!-- Page-specific (main) content here -->
-    <main id="tweets-container">
+    <main class="tweets-container">
 
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
@@ -66,28 +66,8 @@
           </div>
         </form>
       </section>
-
-          <!-- <article>
-            <header class="tweet-whole">
-              <div class="tweet-left">
-              <i id="user-icon"></i>
-              <h2 id="user-name"></h2>
-              </div>
-              <h2 id="user-handle"></h2>
-            </header>
-            <h3 class="tweet-content"></h3>
-          <footer class="tweet">
-            <h3 id="day-count"></h3>
-            <div id="social-icons">
-              <i class="fa-solid fa-flag"></i>
-              <i class="fa-solid fa-retweet"></i>        
-              <i class="fa-solid fa-heart"></i>
-          </div>
-          </footer>
-        </article> -->
-        
-      </section>
-
+      <article>
+      </article>
     </main>
     <script>
       // remove this <script> tag if empty when project is complete!
