--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
     <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/errors.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -47,7 +48,7 @@
     </div>
     <br>
     <div>
-        <h2>Your Name</h2>
+        <h2>Sarah Moss</h2>
     </div>
 </header>
 
@@ -55,7 +56,21 @@
     <main class="tweets-container">
 
       <section class="new-tweet">
-        <h2>Compose Tweet</h2>
+
+      <div class="validation-errors">
+        <div class="validation-error1">
+          <i class="fa-solid fa-triangle-exclamation"></i>
+          <p class="too-long-message">Oops, too many characters!</p> 
+          <i class="fa-solid fa-triangle-exclamation"></i>
+        </div>
+
+        <div class="validation-error2">
+          <i class="fa-solid fa-triangle-exclamation"></i>
+          <p class="no-text-message">Oops, you didn't enter any text</p> 
+          <i class="fa-solid fa-triangle-exclamation"></i>
+        </div>
+      </div>
+
         <form class="form" method="POST" action="/tweets">
           <label for="tweet-text">What are you humming about?</label>
           <!-- JQYUERY will rely on the name and id attributes -->
