Implement slideDown() for error messages

--- a/public/index.html
+++ b/public/index.html
@@ -58,13 +58,13 @@
       <section class="new-tweet">
 
       <div class="validation-errors">
-        <div class="validation-error1">
+        <div class="too-many-chars">
           <i class="fa-solid fa-triangle-exclamation"></i>
           <p class="too-long-message">Oops, too many characters!</p> 
           <i class="fa-solid fa-triangle-exclamation"></i>
         </div>
 
-        <div class="validation-error2">
+        <div class="empty-form">
           <i class="fa-solid fa-triangle-exclamation"></i>
           <p class="no-text-message">Oops, you didn't enter any text</p> 
           <i class="fa-solid fa-triangle-exclamation"></i>
