Fix error message implementation bug

--- a/public/index.html
+++ b/public/index.html
@@ -60,13 +60,13 @@
       <div class="validation-errors">
         <div class="too-many-chars">
           <i class="fa-solid fa-triangle-exclamation"></i>
-          <p class="too-long-message">Oops, too many characters!</p> 
+          <p class="too-long-message">Oops, too many characters! Check the character counter and adjust accordingly.</p> 
           <i class="fa-solid fa-triangle-exclamation"></i>
         </div>
 
         <div class="empty-form">
           <i class="fa-solid fa-triangle-exclamation"></i>
-          <p class="no-text-message">Oops, you didn't enter any text</p> 
+          <p class="no-text-message">Oops, you didn't enter any text! Add some text and try again.</p> 
           <i class="fa-solid fa-triangle-exclamation"></i>
         </div>
       </div>
