Move tweet form message to placeholder for inout

--- a/public/index.html
+++ b/public/index.html
@@ -73,9 +73,9 @@
       </div>
 
         <form class="form" method="POST" action="/tweets">
-          <label for="tweet-text">What are you humming about?</label>
+          <!-- <label for="tweet-text">What are you humming about?</label> -->
           <!-- JQYUERY will rely on the name and id attributes -->
-          <textarea name="text" id="tweet-text-area"></textarea>
+          <textarea name="text" id="tweet-text-area" placeholder="What are you humming about?"></textarea>
           <div id="tweet-footer">
             <button type="submit">Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
