Adjust css page + font styles

--- a/public/index.html
+++ b/public/index.html
@@ -48,8 +48,8 @@
         <img src="/images/profile-hex.png"> 
     </div>
     <br>
-    <div>
-        <h2>Sarah Moss</h2>
+    <div class="username">
+        <strong>Sarah</strong> Moss
     </div>
 </header>
 
