Adjust header left for desktop

--- a/public/index.html
+++ b/public/index.html
@@ -46,11 +46,11 @@
       </div>
   </nav>
 
+  <section class="page-content">
   <header class="main">
     <div>
         <img src="/images/profile-hex.png"> 
     </div>
-    <br>
     <div class="username">
         <strong>Sarah</strong> Moss
     </div>
@@ -88,6 +88,7 @@
       <article>
       </article>
     </main>
+    </section>
     <script>
       // remove this <script> tag if empty when project is complete!
     </script>
