Remove console.logs + code comments

--- a/public/index.html
+++ b/public/index.html
@@ -76,8 +76,7 @@
       </div>
 
         <form class="form" method="POST" action="/tweets">
-          <!-- <label for="tweet-text">What are you humming about?</label> -->
-          <!-- JQYUERY will rely on the name and id attributes -->
+          <!-- JQUERY will rely on the name and id attributes -->
           <textarea name="text" id="tweet-text-area" placeholder="What are you humming about?"></textarea>
           <div id="tweet-footer">
             <button type="submit">Tweet</button>
@@ -89,8 +88,5 @@
       </article>
     </main>
     </section>
-    <script>
-      // remove this <script> tag if empty when project is complete!
-    </script>
   </body>
 </html>
